define prop-types in all component files

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -14,8 +14,8 @@
     "noEmit": true,
 
     /* Linting */
-    "strict": false,
-    "noImplicitAny": false,
+    "strict": true,
+   // "noImplicitAny": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
